# gltf

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: deps.cmake  deps_stb.cmake  deps_yyjson.cmake
examples/: README.md
examples/01_dump/: main.c
examples/04_world_trs/: main.c
examples/05_material_report/: main.c
examples/06_extract_textures/: README.md  main.c
examples/07_glb_to_gltf/: main.c
include/gltf/: gltf.h
src/: base64.c  fs.c  gltf.c  gltf_accessor.c  gltf_decode.c  gltf_doc.c  gltf_images.c  gltf_internal.h  gltf_math.h  gltf_memory.c  gltf_parse.c  gltf_primitive.c  gltf_query.c  gltf_util.c  gltf_world.c
tests/: test_01_minimal.c  test_02_positions_and_indices.c  test_03_primitives.c  test_04_world_matrices_minimal_identity.c  test_05_materials.c  test_06_images_datauri.c  test_07_load_glb.c  test_load_minimal.c  test_main.c
tests/fixtures/: 01-minimal.gltf  02_plane.blend  02_plane.gltf  02_plane_embedded.gltf  03-tri.blend  03-tri.glb  03-tri.gltf  03-tri_and_sqr.blend  03-tri_and_sqr.glb  03-tri_and_sqr.gltf  03-tri_fan.gltf  03-tri_fan_noidx.gltf  03-tri_strip.gltf  03-tri_strip_noidx.gltf  04-world_matrix.gltf  04-world_trs.blend  04-world_trs.gltf  05-materials.blend  05-materials.gltf  06-datauri.gltf  07-basic.blend
tests/fixtures/05-materials-textures-sources/: rusty_metal_04_nor_gl_1k.exr
